# chess

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
assets/: shader.frag  shader.vert  shader_basic.frag  shader_basic.vert  shader_blur.frag  shader_combine.frag
physics_engine/: CMakeLists.txt
physics_engine/include/physics_engine/core/: Environment.hpp  PhysicConfig.hpp  Units_basic.hpp
physics_engine/include/physics_engine/physics/: BarnesHut.hpp  KinematicConstants.hpp  Simulator.hpp
physics_engine/include/physics_engine/physics/physics_functions/: PhysicFunctions.hpp  PhysicFunctionsModular.hpp  PhysicFunctionsTemplated.hpp  PhysicStepBuffer.hpp
physics_engine/src/core/: Environment.cpp
physics_engine/src/physics/: BarnesHut.cpp  Simulator.cpp
physics_engine/src/physics/physic_functions/: PhysicFunctions.cpp  PhysicFunctionsModular.cpp
src/: main.cpp
src/app/: App.cpp  App.hpp  AppResources.cpp  AppResources.hpp  GameApp.cpp  GameApp.hpp
src/app/slides/: Game.cpp  Game.hpp  Slide.cpp  Slide.hpp
src/app/widgets/: Scene.cpp  Scene.hpp  extra.hpp
src/chess/: chess.cpp  chess.hpp
src/core/: Units.cpp  Units.hpp
src/core/universe/: Camera.cpp  Camera.hpp  Property.hpp  Universe.cpp  Universe.hpp
src/graphics/: GladWrap.cpp  GladWrap.hpp  Renderer.cpp  Renderer.hpp
